--- a/report_2025/report_2025.html
+++ b/report_2025/report_2025.html
@@ -591,7 +591,7 @@
                 // 如果找到英雄名称，尝试加载对应的背景图
                 if (heroName && heroName.trim() !== '' && heroName.trim() !== 'None') {
                     hasBackground = true;
-                    const heroImageName = 'image/Hero/' + heroName.trim() + '.jpg';
+                    const heroImageName = 'report_2025/image/Hero/' + heroName.trim() + '.jpg';
                     // 创建一个Image对象来测试图片是否存在
                     const testImg = new Image();
                     testImg.onload = function() {
