--- a/report_2025/report_2025.html
+++ b/report_2025/report_2025.html
@@ -7,8 +7,7 @@
     <style>
         @font-face {
             font-family: 'Handwriting';
-            src: url('handwriting.otf') format('truetype');
-            /* 用户稍后会提供字体文件，先预留路径 */
+            src: url('https://github.com/divinerOW/divinerow.github.io/releases/download/v0.1.0/handwriting.otf') format('truetype');
         }
 
         * {
