--- a/report_2025/report_2025.html
+++ b/report_2025/report_2025.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Handwriting';
-            src: url('https://github.com/divinerOW/divinerow.github.io/releases/download/v0.1.0/handwriting.otf') format('truetype');
+            src: url('t8smftru7.hd-bkt.clouddn.com/handwriting.otf') format('truetype');
         }
 
         * {
