--- a/report_2025/report_2025.html
+++ b/report_2025/report_2025.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Handwriting';
-            src: url('http://t8smftru7.hd-bkt.clouddn.com/handwriting.otf') format('truetype');
+            src: url('https://cdn.jsdelivr.net/gh/divinerow/divinerow.github.io@master/report_2025/handwriting.otf') format('truetype');
         }
 
         * {
@@ -254,7 +254,7 @@
     <script>
         const FONT_CONFIG = {
             // 使用jsDelivr CDN（支持HTTPS，免费，速度快）
-            fontUrl: 'https://cdn.jsdelivr.net/gh/divinerow/divinerow.github.io@main/handwriting.otf'
+            fontUrl: 'https://cdn.jsdelivr.net/gh/divinerow/divinerow.github.io@master/report_2025/handwriting.otf'
         };
         
         // 动态加载字体
