--- a/report_2025/report_2025.html
+++ b/report_2025/report_2025.html
@@ -283,7 +283,7 @@
 
     <script>
         // 本地调试配置：设置为 true 使用本地资源，false 使用 CDN
-        const USE_LOCAL = true;
+        const USE_LOCAL = false;
         
         const FONT_CONFIG = {
             // 根据 USE_LOCAL 配置选择字体路径
