--- a/report_2025/report_2025.html
+++ b/report_2025/report_2025.html
@@ -19,7 +19,7 @@
         body {
             font-family: 'Handwriting', '黑体' , serif;
             background-color: #000000; /* 黑色背景填充 */
-            background-image: url('image/main.jpg');
+            background-image: url('https://cdn.jsdelivr.net/gh/divinerow/pics@main/main.jpg');
             background-size: cover; /* 铺满屏幕，保持比例，边缘可能溢出 */
             background-position: center;
             background-repeat: no-repeat;
