根据用户体验调整翻页提示

--- a/report_2025/report_2025.html
+++ b/report_2025/report_2025.html
@@ -275,7 +275,7 @@
 </head>
 <body>
     <div class="container" id="container"></div>
-    <div class="swipe-hint" id="swipeHint">上滑或点击翻页</div>
+    <div class="swipe-hint" id="swipeHint">上滑或点击屏幕右侧翻页</div>
     <audio id="bgm" loop autoplay>
         <source src="bgm.mp3" type="audio/mpeg">
         <source src="bgm.ogg" type="audio/ogg">
